<resources>
    <string name="app_name">BodiCount</string>
    <string name="empty_table_notice">Looks like you don\'t have any timetables, Get started by adding one</string>
    <string name="timetable_add_btn">"Add "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vertical_ellipsis">&#8942;  </string>
    <string name="empty_timeslot_notice">Looks like you don\'t have any timeslots, Get started by adding one</string>
    <string name="new_timeslot_hint">Name</string>
    <string name="timetable_from">From</string>
    <string name="timetable_to">To</string>
    <string name="timetable_save_btn">Save</string>
    <string name="timetable_cancel_btn">Cancel</string>
    <string name="timetable_pick_start_time">Pick Start Time</string>
    <string name="timetable_pick_end_time">Pick End Time</string>
    <string name="held_online_sw">Held online</string>
    <string name="organizer_login_name">First Name</string>
    <string name="organizer_login_lastname">Last Name</string>
    <string name="organizer_login_email">Email</string>
    <string name="organizer_login_password">Password</string>
    <string name="organizer_login_repeat_password">Repeat Password</string>
    <string name="organizer_signup_btn">Sign Up</string>
    <string name="add_new_slot">Add new slot</string>
    <string name="student_manager_firstname">First Name</string>
    <string name="topic_student_list">Student  List</string>
    <string name="listDescription">Looks like you don\'t have any members,</string>
    <string name="descriptionStudentList">Looks like you don\'t have any members, go to add </string>
    <string name="addOneBtton">Add One</string>
    <string name="topic2_student_list">Student List</string>
    <string name="AddMemberButton">Add New +</string>
    <string name="AddStudentTopic">Add Student Details</string>
    <string name="StudentManagerAddFIrstName">First Name</string>
    <string name="StudentManagerAddFirstNameField" />
    <string name="StudentManagerAddLastName">Last Name</string>
    <string name="StudentManagerAddLastNameField" />
    <string name="StudentManagerAddPhone">Phone Number</string>
    <string name="StudentManagerAddPhoneField" />
    <string name="StudentManagerAddEmail">Email Address</string>
    <string name="StudentManagerAddSTDBtn">Add Student</string>
    <string name="StudentManagerEditStudentTopic">Edit Student Details</string>
    <string name="StudentManagerEditFirstName">First Name</string>
    <string name="StudentManagerEitFirstNameField" />
    <string name="StudentManagerEditLastName">Last Name</string>
    <string name="StudentManagerEditLastNameField" />
    <string name="StudentManagerEditPhone">Phone Number</string>
    <string name="StudentManagerEditPhoneField" />
    <string name="StudentManagerEditEmail">Email Address</string>
    <string name="StudentManagerEditEmailField" />
    <string name="StudentManagerEDITBtn">Update</string>
    <string name="StudentManagerReadFirstName">"First Name : Dilmi "</string>
    <string name="StudentManagerReadLastName">Last Name : Lakshana.</string>
    <string name="StudentManagerReadEmail">Email Address : dilmilakshana@gmail.com</string>
    <string name="StudentManagerReadPhone">Phone Number : 0772378543</string>
    <string name="StudentManagerREADPreBTN">Previous</string>
    <string name="StudentManagerReadNextBtn">Next</string>
    <string name="StudentManagerDeleteNAME1">Dilmi Lakshana</string>
    <string name="StdManager">Dilmi Lakshana</string>
    <string name="StudentManagerDeleteStudentList">Student List</string>
    <string name="StudentManagerDeleteS1">Dilmi Lakshana</string>
    <string name="StudentManagerDeleteS2">Bryan Clifford</string>
    <string name="StudentManagerDeleteS3">Shara Chanmini</string>
    <string name="StudentManagerDeleteS4">Chamina Sewwandi</string>
    <string name="StudentManagerDeleteBtn">Delete</string>
    <string name="manage_timeslot_title">Manage timeslots in the time table</string>
    <string name="timeslot_manager_title">Manage time slots in timetable</string>
    <string name="emailHInt">Email</string>
    <string name="organizerLoginTitle">Organizer Login</string>
    <string name="Login">organizerLogin</string>
    <string name="login">Login</string>
    <string name="student_login">Student Login</string>
    <string name="student_login_btn">Login</string>
    <string name="student_login_email">Email</string>
    <string name="student_login_password">Password</string>
    <string name="student_login_areYouaOrganizer">Are you an Organizer?</string>
    <string name="student_login_clickhere"><u>Click Here</u></string>
    <string name="student_signup">Student Signup</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="student_signupbtn">Sign Up</string>
    <string name="homepage_date">13th Thursday, March 2022</string>
    <string name="homepage_time">8:45:00 am</string>
    <string name="homepage_ongoing">Ongoing</string>
    <string name="homepage_upcoming">Upcoming</string>
    <string name="homepage_ongoingbtn1">Chemistry <i><b>Online</b></i> From - 8.30AM to 10.30AM</string>
    <string name="homepage_ongoingbtn2">Physics <br /> From - 8.30AM to 10.30AM</string>
    <string name="homepage_ongoingbtn3">Physics  From - 8.30AM to 10.30AM</string>
    <string name="userprofile_user_name">John Smith</string>
    <string name="userprofile_user_age">21 years old</string>
    <string name="userprofile_deletebtn">Unsubscribe</string>
    <string name="userprofile_editbtn">Edit Profile</string>
    <string name="userprofile_email">johnsmith@gmail.com</string>
    <string name="userprofile_phonenumber">+94 70123456</string>
    <string name="userprofile_gender">Male</string>
    <string name="userprofile_edit_edit_photo">Edit Photo</string>
    <string name="userprofile_edit_firstname">First Name</string>
    <string name="userprofile_edit_lastname">Last Name</string>
    <string name="userprofile_edit_male">Male</string>
    <string name="userprofile_edit_female">Female</string>
    <string name="userprofile_edit_date">Birthday</string>
    <string name="userprofile_edit_updatebtn">Update</string>
    <string name="userprofile_edit_email">Email</string>
    <string name="userprofile_edit_phonenumber"> Phone</string>
    <string name="attendance_ongoing_module">Chemistry</string>
    <string name="attendance_timeinbtn">Time In</string>
    <string name="attendance_location">You are at 7.10234432,79.983211</string>
    <string name="attendance_meters">Accurate upto 20m</string>
    <string name="attendance_refrestbtn">Refresh Location</string>
    <string name="organizer_student_orgbtn">Login as a Organizer</string>
    <string name="Organizer_student_studbtn">Login as a Student</string>
    <string name="organizer_student_signup">Or Sign Up </string>
    <string name="organizer_student_here"> <u>here</u></string>
    <string name="student_login_repassword">Re-Enter Password</string>
    <string name="scan_to_join">Scan the QR code or share the ID to Atendees</string>
    <string name="organiserIDSubmit">Enter ID</string>
    <string name="studentOrganizerID">Organizer ID</string>
    <string name="subTite">Subject Title</string>
    <string name="subDis">Subject Description</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="imgUrl">Image URL</string>
    <string name="Edit">EDIT</string>
    <string name="Delete">Delete</string>
    <string name="Organic">Organic Chemistry</string>
    <string name="Inorganic">"Inorganic Chemistry "</string>
    <string name="in">Inorganic Chemistry</string>
    <string name="Chemi">Chemistry</string>
    <string name="Maths">Mathematics</string>
    <string name="Phy">Physics</string>
    <string name="Bio">Biology</string>
    <string name="inorganic">Inorganic Chemistry</string>
    <string name="ino">Inorganic Chemistry</string>
    <string name="Editt">Edit</string>
    <string name="deletee">Delete</string>
    <string name="orga">Organic Chemistry</string>
    <string name="Unsubscribe">Unsubscribe from Organization ?</string>
    <string name="studentNotes">Notes</string>
    <string name="studentProfile">Profile</string>
    <string name="orgManangerTitle">Manage your organization</string>
    <string name="orgMangeTimetables">Manage Timetables</string>
    <string name="orgManageStudent">Manage students</string>
    <string name="orgMyProfile">My Profile</string>
    <string name="orgShareQR">"Share QR "</string>
    <string name="orgLogout">Logout</string>
</resources>