<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".organizer.OrganizerDashboard">

    <Button
        android:id="@+id/button8"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:onClick="goTimetableManagement"
        android:text="@string/orgMangeTimetables"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <Button
        android:id="@+id/button13"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:onClick="goStudentManagement"
        android:text="@string/orgManageStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button14"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:onClick="goMyProfile"
        android:text="@string/orgMyProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button16"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:onClick="goToAddStudent"
        android:text="Share QR "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/logOutOrganizer"
        android:layout_width="295dp"
        android:layout_height="80dp"
        android:backgroundTint="#983E3E"
        android:onClick="logout"
        android:text="@string/orgLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/orgManangerTitle"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>